[package]
name = "noon_egui"
version = "0.1.0"
authors = ["Yongkyun Shin<yongkyuns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
eframe = "0.14.0" # Gives us egui, epi and web+native backends
image = { version = "0.23", default-features = false, features = ["png"] }

# # For compiling natively:
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# egui_glium = { version = "0.14.0",  default-features = false }
# # png = "0.17"
# # anyhow = "1.0"
# # glium = "0.30"
# # For compiling to web:
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# egui_web = { version = "0.14.0",  default-features = false }

[features]
default = ["persistence"]
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
