[package]
name = "noon_egui"
version = "0.1.0"
authors = ["Yongkyun Shin<yongkyuns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_egui = { version = "0.4"}
nannou = "0.17"
# palette = { version = "0.5", default-features = false, features = ["named"] }
# egui_demo_lib = { version = "0.13" }
serde = { version = "1", features = ["derive"], optional = true }
usvg = "0.4"

[features]
default = ["persistence"]
persistence = ["serde"] # Enable if you want to persist app state on shutdown

# [profile.release]
# opt-level = 2 # fast and small wasm

# [patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
